# OxideJS

./: .gitignore  BENCHMARK_BASELINE.md  Cargo.toml  LICENSE  README.md  benchmark_baseline.json  deny.toml  rustfmt.toml  设计方案文档.md
.github/workflows/: ci.yml
benchmark/: README.md  build.sh  fetch_test262.sh  run_benchmark.py
crates/oxide_api/: Cargo.toml
crates/oxide_api/src/: lib.rs
crates/oxide_builtins/: Cargo.toml
crates/oxide_builtins/src/: array.rs  array_buffer.rs  boolean.rs  builtins_log.rs  data_view.rs  date.rs  error.rs  function.rs  global.rs  iterator.rs  json.rs  lib.rs  map.rs  math.rs  number.rs  object.rs  reflect.rs  regexp.rs  set.rs  string.rs  stubs.rs  symbol.rs  typed_array.rs
crates/oxide_builtins/src/global/: annex_b.rs  uri.rs
crates/oxide_builtins/tests/: array_boundary_tests.rs  builtins_json_tests.rs  number_methods_tests.rs  object_boundary_tests.rs  object_integrity_tests.rs  runtime_api_tests.rs
crates/oxide_bytecode/: Cargo.toml
crates/oxide_bytecode/src/: lib.rs  module.rs  opcode.rs
crates/oxide_cli/: Cargo.toml
crates/oxide_cli/src/: main.rs
crates/oxide_cli/src/bench/: baseline.rs  js_stress.rs  leak_detect.rs  metrics.rs  mod.rs  output.rs  rust_bench.rs
crates/oxide_cli/tests/: cli_e2e_tests.rs  cli_smoke.rs
crates/oxide_code_cache/: Cargo.toml
crates/oxide_code_cache/src/: code_cache_log.rs  lib.rs
crates/oxide_compiler/: Cargo.toml
crates/oxide_compiler/src/: cache.rs  compiler.rs  compiler_log.rs  counter.rs  emit_ctx.rs  emitter.rs  hash.rs  lib.rs  module.rs  opcode.rs  symbol_table.rs
crates/oxide_compiler/src/counter/: mod.rs
crates/oxide_compiler/src/counter/expr/: assignment.rs  call.rs  chain.rs  control.rs  function.rs  literal.rs  member.rs  mod.rs  object.rs  operator.rs  template.rs
crates/oxide_compiler/src/counter/helper/: binding.rs  class.rs  member.rs  mod.rs
crates/oxide_compiler/src/counter/stmt/: basic.rs  block.rs  control.rs  declaration.rs  exception.rs  iteration.rs  mod.rs  switch.rs
crates/oxide_compiler/src/emitter/: mod.rs
crates/oxide_compiler/src/emitter/expr/: assignment.rs  call.rs  function.rs  literal.rs  member.rs  mod.rs  object.rs  operator.rs  template.rs
crates/oxide_compiler/src/emitter/stmt/: basic.rs  block.rs  control.rs  declaration.rs  exception.rs  iteration.rs  mod.rs  switch.rs
crates/oxide_compiler/src/hash/: class.rs  expression.rs  mod.rs  property.rs  statement.rs  target.rs
crates/oxide_compiler/tests/: arrow_template_tests.rs  compile_expr_tests.rs  compile_stmt_tests.rs  compiler_tests.rs  let_const_tests.rs  structural_hash_tests.rs  symbol_table_tests.rs
crates/oxide_kernel/: Cargo.toml
crates/oxide_kernel/src/: builtin.rs  code_forge.rs  ic_forge.rs  kernel.rs  kernel_log.rs  lib.rs  logging.rs  prop_forge.rs  shape_forge.rs  string_forge.rs  vm_pool.rs
crates/oxide_log/: Cargo.toml
crates/oxide_log/src/: filter.rs  init.rs  level.rs  lib.rs  macros.rs  subsystem.rs
crates/oxide_parser/: Cargo.toml
crates/oxide_parser/src/: error.rs  lib.rs
crates/oxide_parser/tests/: parse_smoke.rs
crates/oxide_runtime_api/: Cargo.toml
crates/oxide_runtime_api/src/: lib.rs
crates/oxide_test262/: Cargo.toml
crates/oxide_test262/src/: main.rs  test262_log.rs
crates/oxide_types/: Cargo.toml
crates/oxide_types/src/: error.rs  lib.rs  mem.rs  object.rs  private_key.rs  shape.rs  value.rs
crates/oxide_vm/: Cargo.toml
crates/oxide_vm/benches/: call.rs  coercion.rs  dispatch.rs  gc_mark_sweep.rs  property.rs
crates/oxide_vm/src/: coercion.rs  ic_helper.rs  lib.rs  mem.rs  native.rs  object.rs  session_arena.rs  session_gc.rs  shape.rs  value.rs  vm.rs  vm_dispatch_ctrl.rs  vm_dispatch_misc.rs  vm_log.rs  vm_pool.rs  vm_props.rs  vm_runtime.rs  vm_state.rs  vm_support.rs
crates/oxide_vm/src/bindings/: bind_array.rs  bind_array_buffer.rs  bind_boolean.rs  bind_data_view.rs  bind_date.rs  bind_error.rs  bind_function.rs  bind_global.rs  bind_iterator.rs  bind_json.rs  bind_map.rs  bind_math.rs  bind_number.rs  bind_object.rs  bind_reflect.rs  bind_regexp.rs  bind_set.rs  bind_string.rs  bind_stubs.rs  bind_symbol.rs  bind_typed_array.rs  mod.rs
crates/oxide_vm/src/builtins/: array.rs  array_buffer.rs  boolean.rs  data_view.rs  date.rs  error.rs  function.rs  global.rs  iterator.rs  json.rs  map.rs  math.rs  mod.rs  number.rs  object.rs  reflect.rs  regexp.rs  set.rs  string.rs  stubs.rs  symbol.rs  typed_array.rs
crates/oxide_vm/src/builtins/global/: annex_b.rs  uri.rs
crates/oxide_vm/src/dispatch/: arithmetic.rs  bitwise.rs  call.rs  comparison.rs  control_flow.rs  member.rs  misc.rs  mod.rs  property.rs
crates/oxide_vm/tests/: arithmetic_tests.rs  arrow_tests.rs  bench_tests.rs  builtins_array_buffer_tests.rs  builtins_array_tests.rs  builtins_boolean_tests.rs  builtins_data_view_tests.rs  builtins_date_tests.rs  builtins_error_tests.rs  builtins_function_tests.rs  builtins_globals_tests.rs  builtins_iterator_tests.rs  builtins_map_tests.rs  builtins_math_tests.rs  builtins_number_tests.rs  builtins_object_tests.rs  builtins_reflect_tests.rs  builtins_regexp_tests.rs  builtins_set_tests.rs  builtins_string_tests.rs  builtins_symbol_tests.rs  builtins_typed_array_tests.rs  class_tests.rs  coercion_tests.rs  comparison_tests.rs  compiler_alignment_binding_tests.rs  compiler_alignment_class_tests.rs  compiler_alignment_expr_tests.rs  control_flow_tests.rs  debug_object_tests.rs  define_property_descriptor_tests.rs  destructuring_tests.rs  for_in_null_undefined_tests.rs  for_in_ordering_tests.rs  for_of_abrupt_completion_tests.rs  for_of_builtin_iter_tests.rs  function_tests.rs  json_tests.rs  logical_tests.rs  mem_tests.rs  (+14 more)
tests/stress/: array.js  call.js  code_forge.js  coercion.js  gc.js  ic_cache.js  property.js  string.js
