[workspace]
resolver = "2"
members = [
    "crates/oxide_parser",
    "crates/oxide_bytecode",
    "crates/oxide_code_cache",
    "crates/oxide_compiler",
    "crates/oxide_types",
    "crates/oxide_vm",
    "crates/oxide_kernel",
    "crates/oxide_runtime_api",
    "crates/oxide_api",
    "crates/oxide_cli",
    "crates/oxide_test262",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
oxc_parser = "0.134.0"
oxc_allocator = "0.134.0"
oxc_ast = "0.134.0"
oxc_span = "0.134.0"
oxc_diagnostics = "0.134.0"
oxc_syntax = "0.134.0"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
ansi_term = "0.12"
serde = "1"
serde_json = "1"
dashmap = "6"
rayon = "1"
bumpalo = { version = "3", features = ["collections"] }
hashbrown = "0.14"
proptest = "1"
rustc-hash = "2"
fast-float = "0.2"
ryu = "1"
memchr = "2"
regex = "1"
indexmap = "2"
lru = "0.18"
smallvec = { version = "1", features = ["union"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-normalization = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
warnings = { level = "deny", priority = -1 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
