[package]
name = "oxide_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OxideJS - Shared kernel (CodeForge, ShapeForge, PropForge, StringForge, BuiltinWorld)"

[dependencies]
oxide_bytecode = { path = "../oxide_bytecode" }
oxide_code_cache = { path = "../oxide_code_cache" }
oxide_parser = { path = "../oxide_parser" }
oxide_types = { path = "../oxide_types" }
dashmap.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
bumpalo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
