[package]
name = "oxide_log"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OxideJS - Structured logging subsystem (tracing-based)"

[dependencies]
tracing = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
tracing-appender = "0.2.5"
