[package]
name = "oxide_types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OxideJS - Shared core types (JsValue, JsObject, Shape, P, Epoch)"

[dependencies]
bumpalo.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
proptest.workspace = true
