[package]
name = "oxide_vm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OxideJS - Register-based VM with epoch arena memory"

[dependencies]
oxide_bytecode = { path = "../oxide_bytecode" }
oxide_kernel = { path = "../oxide_kernel" }
oxide_types = { path = "../oxide_types" }
bumpalo.workspace = true
fast-float.workspace = true
ryu.workspace = true
memchr.workspace = true
regex.workspace = true
serde_json.workspace = true
chrono.workspace = true
indexmap.workspace = true
smallvec.workspace = true
unicode-normalization.workspace = true
tracing.workspace = true

[dev-dependencies]
oxide_compiler = { path = "../oxide_compiler" }
proptest.workspace = true
oxide_parser = { path = "../oxide_parser" }
